# University-Work

./: .gitignore  README.md
FirstYear/Data Structures And Algorithms/Lab1 Problem5/: App.cpp  Bag.cpp  Bag.h  BagIterator.cpp  BagIterator.h  CMakeLists.txt  ShortTest.cpp
FirstYear/Data Structures And Algorithms/Lab2 Problem13/: App.cpp  CMakeLists.txt  MultiMap.cpp  MultiMap.h  MultiMapIterator.cpp  MultiMapIterator.h  ShortTest.cpp
FirstYear/Data Structures And Algorithms/Lab3 Problem26/: App.cpp  CMakeLists.txt  IteratedList.cpp  IteratedList.h  ListIterator.cpp  ListIterator.h  ShortTest.cpp
FirstYear/Data Structures And Algorithms/Lab4 Problem1/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  Matrix.cpp  Matrix.h  ShortTest.cpp
FirstYear/Data Structures And Algorithms/Lab5 Problem1/: CMakeLists.txt  ExtendedTest.cpp  Matrix.cpp  Matrix.h  ShortTest.cpp
FirstYear/Fundamentals of Programming/Lab1/: p1.py  p2.py  p3.py
FirstYear/Fundamentals of Programming/Lab11/: Console.py  GUI.py  Start.py
FirstYear/Fundamentals of Programming/Lab12/: Iterative bktr.py  Recursive bktr.py  Testing.py
FirstYear/Fundamentals of Programming/Snake - Practical Exam/: Console.py  Start.py
FirstYear/Graph Algorithms/GraphAlgorithmsNr1/: Controller.py  Graph.py  bup.txt  output0.txt
FirstYear/Graph Algorithms/GraphAlgorithmsNr2/: Console.py  Graph.py  small_input.txt
FirstYear/Graph Algorithms/GraphAlgorithmsNr3/: Graph.py  Start.py  another_input.txt  small_input.txt
FirstYear/Graph Algorithms/GraphAlgorithmsNr4/: Graph.py  more_input.txt  output0.txt  some_txt_file.txt
FirstYear/Graph Algorithms/GraphAlgorithmsNr5/: Console.py  Controller.py  Graph.py  another_input.txt  some_input.txt  test.in
FirstYear/Object Oriented Programming/Exam - MineSweeper/: CMakeLists.txt  GUI.cpp  GUI.h  MineField.cpp  MineField.h  Observer.h  TableModel.cpp  TableModel.h  main.cpp
FirstYear/Object Oriented Programming/Lab 1/: CMakeLists.txt  main.c
FirstYear/Object Oriented Programming/Lab 10/: CMakeLists.txt  GUI.cpp  GUI.h  PictureDelegate.cpp  PictureDelegate.h  RepoFile.txt  ShoppingCart.csv  ShoppingCart.html  start.cpp
FirstYear/Object Oriented Programming/Lab 10/ConsoleAdministrator/: ConsoleAdministrator.cpp  ConsoleAdministrator.h
FirstYear/Object Oriented Programming/Lab 10/ConsoleUser/: ConsoleUser.cpp  ConsoleUser.h
FirstYear/Object Oriented Programming/Lab 10/Domain/: Coat.cpp  Coat.h
FirstYear/Object Oriented Programming/Lab 10/RepositoryCoats/: RepositoryCoats.cpp  RepositoryCoats.h  RepositoryCoatsFile.cpp  RepositoryCoatsFile.h
FirstYear/Object Oriented Programming/Lab 10/RepositoryShopping/: RepostioryShopping.cpp  RepostioryShopping.h
FirstYear/Object Oriented Programming/Lab 10/ServiceAdmin/: ServiceAdministrator.cpp  ServiceAdministrator.h
FirstYear/Object Oriented Programming/Lab 10/ServiceUser/: ServiceUser.cpp  ServiceUser.h
FirstYear/Object Oriented Programming/Lab 10/TableModel/: TableModel.cpp  TableModel.h
FirstYear/Object Oriented Programming/Lab 10/UndoRedo/: Operation.cpp  Operation.h
FirstYear/Object Oriented Programming/Lab 10/Validators/: ValidatorCoat.cpp  ValidatorCoat.h
FirstYear/Object Oriented Programming/Lab 2-3/: CMakeLists.txt  Start.c
FirstYear/Object Oriented Programming/Lab 2-3/Console/: Console.c  Console.h
FirstYear/Object Oriented Programming/Lab 2-3/Domain/: Domain.c  Domain.h  TestsDomain.c  TestsDomain.h
FirstYear/Object Oriented Programming/Lab 2-3/DynamicArray/: DynamicArray.c  DynamicArray.h  TestsDynamicArray.c  TestsDynamicArray.h
FirstYear/Object Oriented Programming/Lab 2-3/Repository/: Repository.c  Repository.h  TestsRepository.c  TestsRepository.h
FirstYear/Object Oriented Programming/Lab 2-3/Service/: Service.c  Service.h  TestsService.c  TestsService.h
FirstYear/Object Oriented Programming/Lab 2-3/UndoRedo/: TestsUndoRedo.c  TestsUndoRedo.h  UndoRedo.c  UndoRedo.h
FirstYear/Object Oriented Programming/Lab 4-5/: CMakeLists.txt  Start.cpp
FirstYear/Object Oriented Programming/Lab 4-5/Coat/: Coat.cpp  Coat.h  TestCoat.cpp  TestCoat.h
FirstYear/Object Oriented Programming/Lab 4-5/ConsoleAdmin/: ConsoleAdmin.cpp  ConsoleAdmin.h
FirstYear/Object Oriented Programming/Lab 4-5/ConsoleUser/: ConsoleUser.cpp  ConsoleUser.h
FirstYear/Object Oriented Programming/Lab 4-5/DynamicArray/: DynamicArray.h  TestDynamicArray.cpp  TestDynamicArray.h
FirstYear/Object Oriented Programming/Lab 4-5/RepositoryCoats/: RepositoryCoats.cpp  RepositoryCoats.h  TestRepositoryCoats.cpp  TestRepositoryCoats.h
FirstYear/Object Oriented Programming/Lab 4-5/RepositoryShopping/: RepositoryShopping.cpp  RepositoryShopping.h  TestRepositoryShopping.cpp  TestRepositoryShopping.h
FirstYear/Object Oriented Programming/Lab 4-5/ServiceAdmin/: ServiceAdmin.cpp  ServiceAdmin.h  TestServiceAdmin.cpp  TestServiceAdmin.h
FirstYear/Object Oriented Programming/Lab 4-5/ServiceUser/: ServiceUser.cpp  ServiceUser.h  TestServiceUser.cpp  TestServiceUser.h
FirstYear/Object Oriented Programming/Lab 6-7/: CMakeLists.txt  RepoFile.txt  ShoppingCart.csv  ShoppingCart.html  main.cpp
FirstYear/Object Oriented Programming/Lab 6-7/ConsoleAdministrator/: ConsoleAdministrator.cpp
FirstYear/Object Oriented Programming/Lab 6-7/ConsoleUser/: ConsoleUser.cpp
FirstYear/Object Oriented Programming/Lab 6-7/Domain/: Coat.cpp  Coat.h
FirstYear/Object Oriented Programming/Lab 6-7/RepositoryCoats/: ExceptionsRepoCoats.cpp  ExceptionsRepoCoats.h  RepositoryCoats.cpp  RepositoryCoats.h  RepositoryCoatsFile.cpp  RepositoryCoatsFile.h
FirstYear/Object Oriented Programming/Lab 6-7/RepositoryShopping/: RepostioryShopping.cpp  RepostioryShopping.h
FirstYear/Object Oriented Programming/Lab 6-7/ServiceAdmin/: ServiceAdministrator.cpp  ServiceAdministrator.h
FirstYear/Object Oriented Programming/Lab 6-7/ServiceUser/: ServiceUser.cpp  ServiceUser.h  ShoppingExceptions.cpp  ShoppingExceptions.h
FirstYear/Object Oriented Programming/Lab 8-9/: CMakeLists.txt
FirstYear/Object Oriented Programming/Test - Weather/: CMakeLists.txt  GUI.cpp  GUI.h  main.cpp
(+304 files in other folders)
