cmake_minimum_required(VERSION 3.16)
project(DSA_Problem_5_Lab1)

set(CMAKE_CXX_STANDARD 14)

add_executable(DSA_Problem_5_Lab1
        App.cpp
        Bag.cpp
        Bag.h
        BagIterator.cpp
        BagIterator.h
        ExtendedTest.cpp
        ExtendedTest.h
        ShortTest.cpp
        ShortTest.h)